# upthink

./: README.md  pyproject.toml
backend/image_ocr/: markdown_processor.py
backend/related_note/: related_note.py
backend/tag_suggest/: markdown_processor.py  tag_comparator.py  tag_extractor.py  tag_generator.py  tag_guidelines.py
data/: HCI 2025 학회 강의세션들.md
frontend/: app.py  home.py  image_ocr.py  note_freshness.py  related_note.py  tag_suggest.py
