[project]
name = "upthink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-chroma<1.0.0",
    "langchain-upstage>=0.1.7",
    "openai>=1.109.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "transformers>=4.57.1",
]
